# GOPH619_Examples

./: README.md  pyproject.toml
examples/: exp_plot.py  sin_cos.py
src/goph619_examples/: classes.py  function.py
tests/: test_exp.py
